@@ -239,7 +239,8 @@ it's only a template design
 .slideshow {
 	margin-left: auto; 
 	margin-right: auto;
-	text-align:center;	
+	text-align:center;
+	outline: none;	
 }
 
 .slideshowlink {
